--- a/src/appstyling/caculator.css
+++ b/src/appstyling/caculator.css
@@ -1,4 +1,7 @@
- 
+ body{
+   font-size: 16px;
+   box-sizing: border-box;
+ }
  
  .title{
    font-size: 35px;
@@ -6,8 +9,6 @@
  }
  .outerDiv{
     
-    
-    background-color: black;
     width: 300px;
     height: 441px;
     display:  flex;
@@ -26,6 +27,7 @@
    font-size: 20px;
    font-family: 'Orbitron', sans-serif;
    font-family: 'Quicksand', sans-serif;
+   color: #d1d9e6;
  }
 
  .displayy{
@@ -38,82 +40,67 @@
     .displayBox{
     height: 80px;
     width: 100%;
-    background-color:black;
+     background-color: #444444;
     display: flex;
     justify-content:flex-end;
+    margin-bottom: 0.3em;
+    border-radius: 1em;
  }
- .buttonBox{
-    display: flex;
-    flex-direction: column;
+ .buttons-view{
+   margin: 0 auto;
+ color: #ffffff;
+ max-width: 300px;
+ width: calc(100vw);
+ height: 400px;
+ font-size: 1.5em;
+ display: grid;
+ grid-template-columns: repeat(4, 1fr);
+ grid-template-rows: repeat(5, 1fr);
+ gap: 0.3em;
+ border-radius: 2em;
+}
+  
+.buttons-view :nth-child(n){
+   color: #1d1d1d;
+  
+   display: grid;
+   place-items: center;
+  border-collapse: inherit;
+   border-radius: 0.5em;
+   background-color: #E6E7EE;
+   border: 1px solid #d1d9e6;
+   -webkit-box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
+   box-shadow: 3px 3px 6px #b8b9be, -3px -3px 6px #fff;
     
-    align-items: center;
- }
- .buttons{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color:gainsboro;
-    width: 70px;
-    height: 100%;
-    border-width: 0,5px;
-    text-align: center;
-    border-style:solid;
-    border-width: 0.5px;
-    color: black;
-    cursor: pointer;
+}
+.buttons-view :nth-child(n):hover{
+  cursor: pointer;
+  -webkit-box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
 
- }
- .numbers{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color:rgb(143, 141, 141);
-    width: 70px;
-    height: 100%;
-    border-width: 0,5px;
-    text-align: center;
-    border-style:solid;
-    border-width: 0.5px;
-    color: black;
-    cursor: pointer;
- }
- .numbers:hover{
-     
-    background-color: rgb(59, 57, 57);
-    
-     
-    
-    
- }
- .buttons:hover{
-    background-color: rgb(59, 57, 57);
-     
-    
- }
- .mainDiv1{
-    
-    display:  flex;
-    background-color: rgb(94, 94, 99);
-    height: 70px;
+.buttons-view :nth-child(1),.buttons-view :nth-child(15) {
+  color: #fff;  
+  background-color: #333;  
+  border: 1px solid #222;  
+}
 
-
- }
- .mainDiv2{
-    
-    display:  flex;
-    
-    background-color:black;
-    height: 70px;
- }
- .mainDiv3{
-    
-    display:  flex;
-    background-color: black;
-    height: 70px;
- }
- .mainDiv4{
-    
-    display:  flex;
-    background-color: black;
-    height: 140px;
- }
+.buttons-view :nth-child(1):hover,.buttons-view :nth-child(15):hover {
+  cursor: pointer;
+  box-shadow: inset 2px 2px 5px #000, inset -3px -3px 7px #585858;  
+}
+.buttons-view>:first-child{
+  grid-column: 1/3;
+  width: 100%;
+}
+.buttons-view>:nth-child(15){
+   grid-column:4/5 ;
+   grid-row: 4/6;
+}
+.buttons-view>:nth-child(16){
+grid-column: 1/3;
+}
+.assignment:not(:nth-child(15)){
+  background-color:  #d5d6dd !important
+} 
+  
