--- a/src/appstyling/caculator.css
+++ b/src/appstyling/caculator.css
@@ -8,8 +8,10 @@
    display: flex;
    justify-content: space-between;
    align-items: center;
+   width: 100svw;
    height: 100svh;
    background-color: rgb(238, 238, 238);
+
  }
  
  .title{
@@ -19,6 +21,10 @@
  .outerDiv{
     
     flex-grow: 1;
+    
+    display: flex;
+    flex-direction: column;
+
     
     
  }
@@ -55,11 +61,11 @@
     
  }
  .buttons-view{
+flex-grow: 1;
    margin: 0 auto;
  color: #ffffff;
  max-width: 350px;
  width: calc(100vw);
- height: 400px;
  font-size: 1.5em;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
