--- a/src/appstyling/caculator.css
+++ b/src/appstyling/caculator.css
@@ -10,7 +10,7 @@
    align-items: center;
    width: 100svw;
    height: 100svh;
-   background-color: rgb(238, 238, 238);
+   background-color: rgb(245, 245, 245);
 
  }
  
@@ -20,7 +20,7 @@
  }
  .outerDiv{
     
-    flex-grow: 1;
+    
     
     display: flex;
     flex-direction: column;
@@ -32,11 +32,12 @@
    display: flex;
    justify-content: flex-end;
     color: rgba(240, 178, 8, 0.856);
+    font-size: 1.2em;
  }
  .bottomOutput{
    display: flex;
    justify-content: flex-end;
-   font-size: 20px;
+   font-size: 1.5em;
     
    font-family: 'Quicksand', sans-serif;
    color: #d1d9e6;
@@ -61,15 +62,15 @@
     
  }
  .buttons-view{
-flex-grow: 1;
+ 
    margin: 0 auto;
  color: #ffffff;
- max-width: 350px;
+ max-width: 400px;
  width: calc(100vw);
  font-size: 1.5em;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
- grid-template-rows: repeat(5, 1fr);
+ grid-template-rows: repeat(5,  minmax(2em, 4em));
  gap: 0.3em;
  border-radius: 2em;
 }
