--- a/src/appstyling/caculator.css
+++ b/src/appstyling/caculator.css
@@ -52,7 +52,7 @@
         
  }
     .displayBox{
-    height: 80px;
+    height: 7em;
     width: 100%;
      background-color: #444444;
     display: flex;
@@ -63,10 +63,10 @@
  }
  .buttons-view{
  
-   margin: 0 auto;
+ 
  color: #ffffff;
  max-width: 400px;
- width: calc(100vw);
+ width: calc(100vw - 1em);
  font-size: 1.5em;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
